crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__sheep_dogs_remove.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
assertion_line: 91
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                                                                                    6 in the flock
                                                                                                                                                                
  remove api's jobs table? enter confirms, any other key cancels                                                                                                
  deploy            -          (no table)                                                                                                                       
> jobs              set        concurrency, hours, merge, models                                                                                                
  legacy            read-only  url  (publishes no sheep schema)                                                                                                 
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
esc back   j/k select   g/G first/last   r refresh   enter open   d remove   q quit                                                              control enabled
