crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__sheep_dogs_row.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                                                                                    6 in the flock
                                                                                                                                                                
 ██ api  (sheep config)                                                                                                                                         
   process   logging   inputs   restart   readiness   shutdown   watch   cron   dogs     tab next group   1…9 jump                                              
  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  FIELD                       VALUE                                           LANDS                                                                             
>› dogs                       jobs, legacy                                    now        FOCUSED  dogs  opaque                                                  
                                                                                          Settings for one dog on this sheep alone, opaque to shep              
  env                                                                                                                                                           
   DATABASE_URL               (set)                                                       now     jobs, legacy                                                  
   NODE_ENV                   (set)                                                       default {}                                                            
   + add a key                                                                            example (none)                                                        
                                                                                                                                                                
                                                                                          ● now  the running sheep picks it up without stopping                 
                                                                                                                         pick the timing when you close the pane
                                                                                                                                                                
                                                                                          ──────────────────────────────────────────────────────────────────────
                                                                                          VALIDATION                                                            
                                                                                          █ a table of dog name to a table of settings                          
                                                                                          █ a dog name shep does not know about yet                             
                                                                                          █ refused: a value that is not a table                                
                                                                                          █ refused: an empty dog name                                          
  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  = read-only, set it in the Flockfile   ~ no widget for this shape   ! parked, awaits a respawn   * yours   -> changed by you, not yet written                 
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
esc close   j/k select   g/G first/last   r refresh   space cycle   e edit   d back to default   u undo   h help   * yours   ! parked   q quit   control enabled
